# QtVideoTranscriber

./: .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  qttranscriberwidget.cpp  qttranscriberwidget.h  qttranscriberwidget.ui  transcriber.cpp  transcriber.h  transcription.cpp  transcription.h  transcriptionmodel.cpp  transcriptionmodel.h  transcriptionqueuemanager.cpp  transcriptionqueuemanager.h
